2004-10-05  Jeffrey Stedfast  <fejj@novell.com>

	* camel-service.c (camel_getaddrinfo): Check msg->result for error
	and set an exception if appropriate.
	(camel_getnameinfo): Same.

2004-10-04  Jeffrey Stedfast  <fejj@novell.com>

	* camel-service.c (camel_getaddrinfo): Add a non-const cast for
	hints when changing the ai_family member in the IPv6-disabled
	case. Fixes bug #67028.

2004-10-05  Not Zed  <NotZed@Ximian.com>

	** See bug #67527.

	* camel-service.c (cs_getaddrinfo, cs_getnameinfo): don't loop on
	EAI_AGAIN, it doesn't appear to mean the same as EAGAIN does with
	system calls (i guess 'no shit sherlock' really).

2004-09-28  Not Zed  <NotZed@Ximian.com>

	** See bug #66509.

	* providers/nntp/camel-nntp-store.c (camel_nntp_command): if we
	get an error selecting the folder, disconnect/include it in the
	re-try loop.
	(camel_nntp_command): don't set the exception based on errno,
	exception processing is already done.  don't clear it if we're on
	the 3rd retry.

2004-09-27  Not Zed  <NotZed@Ximian.com>
	
	* providers/nntp/camel-nntp-store.c (nntp_get_folder_info): don't
	do any locking here.
	(nntp_store_get_folder_info_all): move the locking here.
	(nntp_store_get_subscribed_folder_info): and some here too.

	* providers/nntp/camel-nntp-store.c:
	* providers/nntp/camel-nntp-folder.c: Remove nntp command_lock and
	just use the service connect lock for serialisation.

2004-09-14  Jeffrey Stedfast  <fejj@novell.com>

	* providers/nntp/camel-nntp-store.c (camel_nntp_try_authenticate):
	s/not/no/ in the error string. Fixes bug #65828.

2004-09-24  Not Zed  <NotZed@Ximian.com>

	* camel-vee-store.c (camel_vee_store_finalise): free the unmatched
	uid values as well.

	* camel-vee-folder.c (vee_folder_remove_folder): lock main folder
	summary lock before doing the unmatched stuff, so the order is
	right.

2004-08-25  Ed Catmur  <ed@catmur.co.uk>

	** See bug #63881.

	* camel-vee-store.c:
	* camel-vee-folder.c: move the unmatched